--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <header>
             <nav>             
                 <b><a href="index.html">Home</a></b>
-                <b><a href="../likes/likes.html">Likes</a></b>
-                <b><a href="../activity/activity.html">Activity</a></b>
+                <b><a href="/likes/likes.html">Likes</a></b>
+                <b><a href="/activity/activity.html">Activity</a></b>
             </nav>
             <div class="gif">
             <img src="img/rain.gif">
