--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- Email me: <a href="mailto:jthatcher1@sfsu.edu"> HERE </a>
             Portfolio: <a href="https://joshuadt.github.io/portfolio/"> HERE </a> -->
             Use these controls to adjust volume :)
-            <audio src="../img/rain.mp3" controls autoplay></audio>   
+            <audio src="/img/rain.mp3" controls autoplay></audio>   
         </footer> 
     </div>
     </body>
